--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-
-        <activity
-            android:name=".RegisterActivity">
+        <activity android:name=".AddEventActivity"></activity>
+        <activity android:name=".RegisterActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mas.jacketcoach.LoginActivity" />
         </activity>
-
         <activity
             android:name=".LoginActivity"
             android:theme="@style/LoginTheme">
@@ -49,7 +47,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_maps" />
-
         <activity android:name=".FirebaseUIActivity">
 
             <!-- <intent-filter> -->
