--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
 
     // firebase real-time DB
     implementation 'com.google.firebase:firebase-database'
+
+    // Circle ImageView (this app needs a security audit for sure)
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
